# rapp_advanced_tutorials

./: README.md
cpp/: .README.md.swp  README.md
cpp/computer_vision/: README.md
cpp/computer_vision/face_detection/: CMakeLists.txt  README.md
cpp/computer_vision/face_detection/source/: face_detection.cpp
cpp/computer_vision/human_detection/: CMakeLists.txt  README.md
cpp/computer_vision/human_detection/source/: human_detection.cpp
cpp/computer_vision/object_recognition/: CMakeLists.txt  README.md
cpp/computer_vision/object_recognition/source/: object_recognition.cpp
cpp/nao_robot/: README.md
cpp/nao_robot/face_detection/: CMakeLists.txt  README  README.md  main.cpp  main_old.cpp
cpp/nao_robot/helloworld/: CMakeLists.txt  README.md
cpp/nao_robot/helloworld_static/: CMakeLists.txt  README.md
cpp/nao_robot/helloworld_static/source/: helloworld_static.cpp
cpp/nao_robot/qibuild/: README.md
cpp/nao_robot/qibuild/.qi/: worktree.xml
cpp/nao_robot/qibuild/facedetection/: CMakeLists.txt  README.md  main.cpp  qiproject.xml
cpp/nao_robot/qibuild/facedetection/build-cross-atom/: CMakeCache.txt  Makefile  cmake_install.cmake  dependencies.cmake
cpp/nao_robot/qibuild/facedetection/build-cross-atom/sdk/share/qi/: path.conf
cpp/nao_robot/qibuild/facedetection/build-naoqi-sdk/: CMakeCache.txt  Makefile  cmake_install.cmake  dependencies.cmake
cpp/nao_robot/qibuild/facedetection/build-naoqi-sdk/sdk/share/qi/: path.conf
cpp/nao_robot/qibuild/helloworld/: .gitignore  CMakeLists.txt  README.md  main.cpp  qiproject.xml
cpp/nao_robot/say_services/: CMakeLists.txt  README.md  main.cpp
